quorum/test/tests/other/Fail/ReassignConstantFromOtherClassThroughMethod.quorum
/*
Expected output: should not compile
*/

use Libraries.System.File
use Libraries.Compute.Random
use Libraries.Compute.Math

class Main
    action Main
        ClassWithConstants constants
        AttemptToReassign(constants)
    end

    action AttemptToReassign(ClassWithConstants constants)
        constants:k = 9
        constants:z = 11.0 + constants:k
        constants:m = undefined

        Math m2
        constants:m = m2
    end
end